# heuristic-compiler

./: .gitignore  CLAUDE.md  README.md  docling.ipynb  pyproject.toml
.claude/: context.md  project.md  settings.json  stack.md  standards.md  workflow.md
.claude/checklists/: debugging.md  pr.md  release.md
.claude/commands/: add-module.md  add-tests.md  improve-performance.md  refresh-context.md  review-diff.md  write-docs.md
.claude/templates/: pyproject.api.toml  readme.template.md
.github/workflows/: claude.yml
docs/: context.md  deployment.md  heuristic_layer_integration.md  overview.md  tatr-pipeline.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: heuristic_layer.py
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/FeatureControls/: helpers.test.ts  helpers.ts  index.tsx
frontend/src/components/OutputPanel/: index.tsx
frontend/src/components/RuleEditor/: index.tsx  parseRuleLineRanges.test.ts  parseRuleLineRanges.ts
frontend/src/hooks/: usePyodideWorker.ts
frontend/src/types/: index.ts
frontend/src/utils/: extractFeatures.test.ts  extractFeatures.ts
frontend/src/workers/: pyodide.worker.ts
pdf-extraction/: docling.ipynb  tatr.ipynb
pdf-extraction/output/: Session 06 - Regular Expressions_hybrid.json  naive_bayes_extracted.json
pdf-extraction/output/markdown/Session 06 - Regular Expressions/: Session 06 - Regular Expressions.md
pdf-extraction/output/markdown/Session 07 - Information Retrieval/: Session 07 - Information Retrieval.md
pdf-extraction/output/markdown/Session 09 - Naive Bayes/: Session 09 - Naive Bayes.md
