[project]
name = "pdf-extraction"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Boris Gans", email = "borisgans418@gmail.com" }
]
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    # Core deps
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "timm>=1.0",       # 0.5.4 (from nougat-ocr) lacks feature_info 'index' key needed by transformers TimmBackbone
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
]
nougat = [
    "nougat-ocr>=0.1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf-extraction/"]

# ---- Tooling ----

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
